--- a/index.html
+++ b/index.html
@@ -860,6 +860,10 @@
             .about-content {
                 flex-direction: column;
             }
+
+            .pc-br {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -922,15 +926,15 @@
             <div class="about-text fade-in-right">
                 <h3>Expertise & Education</h3>
                 <p>
-                    서래뷰티는 단순한 시술을 넘어 고객의 고유한<br>
+                    서래뷰티는 단순한 시술을 넘어 고객의 고유한<br class="pc-br">
                     아름다움을 찾아드리는 프리미엄 뷰티샵입니다.<br><br>
-                    20년 경력의 수석 전문가가 고객 한 분 한 분에게<br>
+                    20년 경력의 수석 전문가가 고객 한 분 한 분에게<br class="pc-br">
                     맞춤형 디자인을 제공합니다.
                 </p>
                 <p>
-                    KTF 서초 평생교육원에서는 체계적인<br>
-                    커리큘럼을 통해 차세대 뷰티 전문가를 양성하고<br>
-                    있습니다. 기초 이론부터 실전 테크닉까지,<br>
+                    KTF 서초 평생교육원에서는 체계적인<br class="pc-br">
+                    커리큘럼을 통해 차세대 뷰티 전문가를 양성하고<br class="pc-br">
+                    있습니다. 기초 이론부터 실전 테크닉까지,<br class="pc-br">
                     전문가로 성장하는 모든 과정을 함께합니다.
                 </p>
             </div>
