Center align About Us header on PC

--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
             font-size: 1.8rem;
             margin-bottom: 20px;
             color: var(--gold-color);
+            text-align: center;
         }
 
         .about-text p {
