Refine mobile hero: neutral bg, 3-button single row layout

--- a/index.html
+++ b/index.html
@@ -1168,16 +1168,16 @@
                 <!-- Subtitle -->
                 <p>프리미엄 시니어 혁신 평생교육</p>
 
-                <!-- 3 Buttons Layout (Grid) -->
+                <!-- 3 Buttons Layout (Single Row) -->
                 <div class="mobile-cta">
                     <a href="https://www.instagram.com/s.rae7400" target="_blank" class="hero-btn">
-                        <span>📸</span> Instagram
+                        <span>📸</span> Insta
                     </a>
                     <a href="https://blog.naver.com/youngme777" target="_blank" class="hero-btn">
-                        <span>📝</span> 네이버 블로그
+                        <span>📝</span> Blog
                     </a>
-                    <a href="#contact" class="hero-btn primary full-width">
-                        <span>✉️</span> 교육 상담
+                    <a href="#contact" class="hero-btn primary">
+                        <span>✉️</span> 교육상담
                     </a>
                 </div>
             </div>
