Fix CSS: Single row layout and neutral background

--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@
             width: 100%;
             height: 100vh;
             /* Full viewport height */
-            background: radial-gradient(ellipse at 30% 50%, #1a1530 0%, #0c0f14 60%),
-                radial-gradient(ellipse at 70% 50%, #0f1a1a 0%, transparent 60%);
+            background: radial-gradient(ellipse at 30% 50%, #1a1c20 0%, #0c0f14 60%),
+                radial-gradient(ellipse at 70% 50%, #0f1215 0%, transparent 60%);
+            /* Neutral Dark */
             z-index: 5;
             justify-content: center;
             align-items: center;
@@ -487,13 +488,15 @@
             opacity: 0;
         }
 
-        /* Mobile Buttons (Grid Layout) */
+        /* Mobile Buttons (Single Row) */
         .mobile-cta {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 8px;
             width: 100%;
-            max-width: 320px;
+            max-width: 360px;
+            /* fit 3 buttons */
             opacity: 0;
             animation: slideUp 1s ease-out 0.8s forwards;
         }
@@ -502,21 +505,24 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 6px;
-            padding: 10px 14px;
-            /* Reduced size */
+            gap: 4px;
+            padding: 8px 10px;
+            /* Reduced margin/padding */
             border: 1px solid rgba(197, 160, 89, 0.4);
-            border-radius: 30px;
+            border-radius: 20px;
+            /* Slightly tighter radius */
             background: rgba(197, 160, 89, 0.06);
             color: var(--gold-color);
-            font-size: 0.85rem;
-            /* Reduced font size */
+            font-size: 0.8rem;
+            /* Smaller font */
             font-weight: 500;
             text-decoration: none;
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
             white-space: nowrap;
+            flex: 1;
+            /* Distribute space evenly */
         }
 
         .hero-btn.full-width {
